--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@ body {
   </div>
 
 <div class="navbar">
-  <a href="file:///E:/Europ%C3%A4ischer%20Wettbewerb/index.html" >Start</a>
+  <a href="https://femp49.github.io/europa-Wettbewerb/" >Start</a>
   <a href="" class="active">Emissionen</a>
-  <a href="file:///E:/Europ%C3%A4ischer%20Wettbewerb/Website%20Politik.html" >Klimapolitik</a>
-  <a href="file:///E:/Europ%C3%A4ischer%20Wettbewerb/Website%20Vorschlaege.html" >Vorschläge</a>
+  <a href="https://femp49.github.io/femp49Politik.github.io/" >Klimapolitik</a>
+  <a href="https://femp49.github.io/femp49Vorschlaege.github.io/" >Vorschläge</a>
 </div>
 
 <div class="row"> 
